--- a/src/style/globals.css
+++ b/src/style/globals.css
@@ -1,3 +1,49 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.Form::before 
+{
+  content: '';
+  position: absolute;
+  width: 500px;
+  height: 500px;
+  background-image: conic-gradient(
+    transparent,
+    transparent,
+    transparent,
+    #0004eb
+  );
+  animation: rotate 8s linear infinite;
+  z-index: -1;
+}
+
+.Form::after 
+{
+  content: '';
+  position: absolute;
+  width: 500px;
+  height: 500px;
+  top: 0%;
+  background-image: conic-gradient(
+    transparent,
+    transparent,
+    transparent,
+    #0885d3
+  );
+  animation: rotate 8s linear infinite;
+  animation-delay: 1s;
+  z-index: -1;
+
+}
+
+@keyframes rotate {
+  0% 
+  {
+    transform: rotate(0deg);
+  }
+  100%
+  {
+    transform: rotate(360deg);
+  }
+}
